
	* src/graphics.c (place_objects) src/set.c (set_obj):
	Apply default rectangle style at the time of a "set object rect"
	command rather than waiting until the rectangle is drawn.  This prevents
	the default style line/dash settings from overriding explicit rectangle
	commands.
	Bug #1460

	* src/save.c (save_linetype):  Bugfix - dashtype was being saved only if
	there was also a point type.

2014-08-15  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/gplt_x11.c:  For single byte fonts gnuplot_x11 uses a list of
	previously used fonts to speed up the search for a new target font.
	Now we add an equivalent for multi-byte font search.

2014-08-14 Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_rectangle) src/graph3d.c (map3d_position_r)
	demo/rectangle.dem:  Fix y extent and clipping of rectangles with
	negative y coord or inverted axes.
	Bug #1462

2014-08-05 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress):  Remove extraneous event_reset.

2014-08-02 Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (parse_colorspec):  Apply user-defined line colors
	to text color also.
	Bug #1452

	src/misc.c src/save.c src/set.c src/term.c src/term_api.h:
	Store custom dashtype string as a constant length character array
	rather than a dynamically allocated string.  This fixes memory
	leakage that happened whenever a linetype using dashes was discarded.

2014-08-01 Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (event_buttonpress):  Trap mouse button click on
	press rather than on release so that "pause mouse {button1|any}"
	takes precedence over a key binding to the mouse button.
	Bugfix

2014-07-30 Ethan A Merritt  <merritt@u.washington.edu>

	* term/x11.trm:  Remove misleading mention of -noevents.  This is a
	command line option for gnuplot_x11, not for gnuplot itself.

	* src/datafile.c docs/gnuplot.doc demo/heatmaps.dem:
	New text input matrix keywords `columnheaders` and `rowheaders`.